fix text wrapping of images

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -4,9 +4,11 @@ body {
 #content {
   margin-left: auto;
   margin-right: auto;
-  width: 750px;
+  width: 810px;
   border: 15px solid cyan;
-  padding: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 20px;
 }
 
 #greeting-container {
@@ -23,7 +25,8 @@ body {
 }
 
 .gallery:hover .gallery_description{
-  border: 1px solid rgb(32, 32, 32);
+  visibility: visible;
+  border: 2px solid rgb(32, 32, 32);
 }
 
 .gallery img {
@@ -46,14 +49,14 @@ body {
 #info-footer {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 15;
+    margin-top: 15px;
     text-align: center;
 }
 
 #footer-image {
   border: 0;
-  margin-left: 40;
-  margin-right: 40;
-  width: 100;
-  height: 100;
+  margin-left: 40px;
+  margin-right: 40px;
+  width: 100px;
+  height: 100px;
 }
